// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-color: #E6E6E6;
  border-width: 1px;
  margin-top: 24px;
  margin-right: 0;
  margin-bottom: 24px;
  margin-left: 0;
  border-style: solid;
}

<hr
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;

exports[`Divider renders with props 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-color: #0A0A0A;
  border-width: 4px;
  margin-top: 16px;
  margin-right: 64px;
  margin-bottom: 16px;
  margin-left: 64px;
  border-style: solid;
}

<hr
    class="emotion-0"
    data-testid="divider"
  />
</DocumentFragment>
`;
